--- a/Teleasis-website/wwwroot/css/site.css
+++ b/Teleasis-website/wwwroot/css/site.css
@@ -1,18 +1,34 @@
-html {
-  font-size: 14px;
+/*PAGINA AUTENTIFICARE*/
+.container-autentificare {
+    max-width: 100%;
+    padding-right: 0;
+    padding-left: 0;
+    margin-right: 0;
+    margin-left: 0;
+}
+.card-autentificare{
+    margin-top: -30px;
+}
+.button-login {
+    width: 100%;
+    background-color: #3f7bff;
+    color: white;
+    border: none;
+}
+    .button-login:hover {
+        background-color: #79a3ff;
+        border: none;
+        color: white;
+    }
+.container-section {
+    background-color: #79a3ff !important;
+}
+.img-autentificare{
+    padding: 50px;
+}
+.logo{
+    width: 70px;
+    margin-right: 20px;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
-}
+/*---------------------*/
