Added Home Page for Admin

--- a/Teleasis-website/Views/Autentificare/Autentificare.cshtml
+++ b/Teleasis-website/Views/Autentificare/Autentificare.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Pagina Autentificare";
 }
 
 <section class="vh-100 container-section" style="background-color: #9A616D;">
@@ -15,10 +15,10 @@
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
 
-                <form>
+                <form method="post">
 
                   <div class="d-flex align-items-center mb-3 pb-1">
-                    <img src="~/images/logo.svg" class="logo" ></img>
+                    <img src="~/images/logo.svg" class="logo" />
                     <span class="h1 fw-bold mb-0">Teleasis</span>
                   </div>
 
@@ -26,19 +26,20 @@
 
                   <div class="form-outline mb-4">
                     <label class="form-label" for="form2Example17">Email</label>
-                    <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                    <input type="email" id="form2Example17" class="form-control form-control-lg" name="email"/>
                   </div>
 
                   <div class="form-outline mb-4">
                     <label class="form-label" for="form2Example27">Parolă</label>
-                    <input type="password" id="form2Example27" class="form-control form-control-lg" />
+                    <input type="password" id="form2Example27" class="form-control form-control-lg" name="password"/>
                   </div>
 
                   <div class="pt-1 mb-4">
-                    <button class="btn btn-lg btn-block button-login" type="button">Autentificare</button>
+                    <button class="btn btn-lg btn-block button-login" type="submit" >Autentificare</button>
                   </div>
 
                   <a class="small text-muted" href="#!">Ați uitat parola?</a>
+                  <p class="eroare text-danger">@ViewBag.Eroare</p>
                 </form>
 
               </div>
