--- a/Teleasis-website/wwwroot/css/site.css
+++ b/Teleasis-website/wwwroot/css/site.css
@@ -85,3 +85,28 @@
     }
 
 /*---------------------*/
+
+/*
+    MODAL ADAUGARE CONT
+*/
+
+.container-acasa .modal-content {
+    padding: 5px;
+}
+ #adaugare-medic, #adaugare-ingrijitor, #adaugare-supraveghetor {
+    display:none;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+/*----------------------*/
